test_suite/tests/ui/unsupported/union_de.rs
#[macro_use]
extern crate serde_derive;

#[derive(Deserialize)]
union Union {
    x: u8,
    y: (),
}

fn main() {}
